openshift/server-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
      annotations:
        image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"server:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"server\")].image"}]'
    spec:
      containers:
        - name: server
          image: image-registry.openshift-image-registry.svc:5000/pastepick/server:latest
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 30
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: server
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: server
spec:
  to:
    kind: Service
    name: server
  port:
    targetPort: 3001
  tls:
    termination: edge
