openshift/server-py.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-fastapi
  labels:
    app: server-fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-fastapi
  template:
    metadata:
      labels:
        app: server-fastapi
      annotations:
        image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"server-fastapi:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"server-fastapi\")].image"}]'
    spec:
      containers:
        - name: server-fastapi
          image: image-registry.openshift-image-registry.svc:5000/pastepick/server-fastapi:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: 2Gi
              cpu: "1"
            requests:
              memory: 1Gi
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: server-fastapi
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: server-fastapi
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: server-fastapi
spec:
  to:
    kind: Service
    name: server-fastapi
  port:
    targetPort: 8000
  tls:
    termination: edge
